Refactor JavaDocs and dependencies for improved readability and modern standards
- Replaced redundant asterisks in JavaDocs with `<p>` for better formatting.
- Updated Gradle Spring AI dependencies for consistency and version management.
- Enhanced documentation in code comments for clarity.
- Simplified estimateDamage logic in LLMPlayer, avoiding unnecessary assignments.
- Updated README with clearer table formatting.